@@ -312,7 +312,10 @@ SocksProxy::mainEvent(int event, void *data)
             }
 
             uint32_t ip;
+            struct sockaddr_in addr;
+
             memcpy(&ip, &p[4], 4);
+            ats_ip4_set(&addr, ip, htons(port));
 
             state = SERVER_TUNNEL;
             clientVIO = vio;    // used in the tunnel
@@ -323,7 +326,7 @@ SocksProxy::mainEvent(int event, void *data)
             vc_options.socks_support = p[1];
             vc_options.socks_version = version;
 
-            Action *action = netProcessor.connect_re(this, ip, port, &vc_options);
+            Action *action = netProcessor.connect_re(this, ats_ip_sa_cast(&addr), &vc_options);
             if (action != ACTION_RESULT_DONE) {
               ink_assert(pending_action == NULL);
               pending_action = action;
